give functionality to nav links

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                 </div>
                 <div class="nav-right">
                     <ul class="nav__list toggle">
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Cerificates</a></li>
-                        <li><a href="#">Contact Me</a></li>
+                        <li class="nav__list--portfolio">Portfolio</li>
+                        <li class="nav__list--about">About Me</li>                        
+                        <li class="nav__list--certificate">Cerificates</li>
                     </ul>
                 </div>
             </nav>
