--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h3 class="heading-3">Hello! Nice to See You Here!</h3>
                     <h1 class="heading-1">I am Amrit Poudel</h1>
                     <h2 class="heading-2">A Front-End Developement Enthusiast</h2>
-                    <button class="btn btn-header">About Me</button>          
+                    <a class="btn btn-header" src="">About Me</a>          
                 </header>
                 <div class="hero__social">
                         <div class="hero__social--github"><i class="fab fa-github-square"></i></div>
@@ -112,31 +112,37 @@
                 <h2 class="heading-2">About Me</h2>         
                 <div class="aboutMe__story">
                     <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
-                    <p>
-                        Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
-                        I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
-                        I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
-                    </p>
-                    <p>
-                        FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
-                        At this point in time, I am looking for a company to grow with, in developing a better web world.
-                    
-                    </p>
-                    <p>               
-                        The tools I use in Front-End Developement are:
-                        <span>HTML5</span>,
-                        <span>CSS3</span>,
-                        <span>SASS</span>,
-                        <span>Javascript</span>,
-                        <span>React.js</span>,
-                        <span>Express.Js</span>,
-                        <span>MongoDB</span>,
-                        <span>Node.Js</span>,
-                        <span>JQuery</span>,
-                        <span>Bootstrap</span>, and always on to learn new technologies.
-                    </p>
+                    <div>
+                        <p>
+                            Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
+                            I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
+                            I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
+                        </p>
+                        <p>
+                            FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
+                            At this point in time, I am looking for a company to grow with, in developing a better web world.
+                        
+                        </p>
+                        <p>               
+                            The tools I use in web Developement are:
+                            <span>HTML5</span>,
+                            <span>CSS3</span>,
+                            <span>SASS/SCSS</span>,
+                            <span>Javascript/ES6</span>,
+                            <span>React.js</span>,
+                            <span>Express.Js</span>,
+                            <span>MongoDB</span>,
+                            <span>Node.Js</span>,
+                            <span>JQuery</span>,
+                            <span>Bootstrap</span>, and always on to learn new technologies.
+                        </p>
+                    </div>
                 </div>
-                <Button class="btn-contactMe btn">Contact Me! &#9993;</Button>
+                <div class="aboutMe__contact">
+                    <span>Contact: </span>
+                    <span>amritpoudel11@gmail.com</span>
+                    <span> &#128241; +351 920 023 404</span>
+                </div>
             </section>
             <section class="certificate-box">           
                 <h2 class="certificate-box__heading">Some of my Certificates</h2>
