add hero background/portfolio margin increase

--- a/index.html
+++ b/index.html
@@ -82,14 +82,6 @@
                         </div>
                     </div>
                     <div class="card card-5">
-                        <img src="/resources/portfolio-screenshots/rgbGame.PNG" alt="guess the Rgb color game">
-                        <div class="card__description">
-                            <h5 class="card__description--head">RGB guess the color game</h5>
-                            <p class="card__description--text">for web development course in Udemy by Colt Steele</p>
-                            <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
-                        </div>
-                    </div>
-                    <div class="card card-6">
                         <img src="/resources/portfolio-screenshots/trillo-amrit.PNG" alt="trillo page">
                         <div class="card__description">
                             <h5 class="card__description--head">Trillo-a hotel review page</h5>
@@ -97,7 +89,7 @@
                             <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
                         </div>
                     </div>
-                    <div class="card card-7">
+                    <div class="card card-6">
                         <img src="/resources/portfolio-screenshots/wikiViewer.PNG" alt="wikipedia search and view app">
                         <div class="card__description">
                             <h5 class="card__description--head">WikiViewer</h5>
@@ -186,7 +178,7 @@
                 
                 <div class="footer__nav">
                     <h3 class="heading">Contact:</h3>
-                <p>Email: amritpoudel11@gmail</p>
+                    <p>Email: amritpoudel11@gmail</p>
                 </div>          
                 <div class="footer__social">
                     <div class="footer__social--github"><i class="fab fa-github-square"></i><div>GitHub</div></div>
@@ -194,7 +186,10 @@
                     <div class="footer__social--twitter"><i class="fab fa-twitter-square"></i><div>Twitter</div></div>
                     <div class="footer__social--facebook"><i class="fab fa-facebook-square"></i><div>Facebook</div></div>
                 </div>
-                <div class="footer__copy"> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
+                <div class="footer__copy">
+                    <p>Welcome page background Photo by Goran Ivos on Unsplash</p>
+                    <p>&copy; Amrit Poudel,  Lisbon, Portugal, 2019.</p>
+                </div>
             </section>
         </div>      
         <script src="portfolio.js" async defer></script>
