navbar issues fixed

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body id="Home">
         <div class="container">
             <nav class="nav">
                 <div class="nav-left">
-                    <img src="resources/logopurple.png" alt="amrit logo" class="nav__img">
+                    <a href="#Home" class="nav__logo">
+                        <img src="resources/logopurple.png" alt="amrit logo" class="nav__img">
+                        <div class="nav__header">
+                            <h3>Amrit Poudel</h3>
+                            <h6>Front-End Developer</h6>
+                        </div>
+                    </a>
                     <div class="nav__icon">
                         <i class="fa fa-bars"></i>
                     </div>
