--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="card card-1">
                         <img src="/resources/portfolio-screenshots/fccLisbon.PNG" alt="fcc lisbon landing page">
                         <div class="card__description">
-                            <h5 class="card__description--head">FreeCodeCamp-Lisbon Landing Page</h5>
+                            <a href="https://www.freecodecamplisbon.org/" target="_blank"><h5 class="card__description--head">FreeCodeCamp-Lisbon Landing Page</h5></a>
                             <p class="card__description--text">A team project in FreeCodeCamp-Lisbon</p>
                             <p class="card__description--text">Tools: HTML, CSS, Bootstrap, Javascript, JQuery</p>
                         </div>
@@ -68,7 +68,7 @@
                     <div class="card card-2">
                         <img src="/resources/portfolio-screenshots/natour.PNG" alt="natour tour landing page">
                         <div class="card__description">
-                            <h5 class="card__description--head">Natour - A tavel web site</h5>
+                            <a href="https://travelsite-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Natour - A tavel web site</h5></a>
                             <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
                             <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
                         </div>
@@ -76,7 +76,7 @@
                     <div class="card card-3">
                         <img src="/resources/portfolio-screenshots/nexter-amrit.PNG" alt="nexter project landing page">
                         <div class="card__description">
-                            <h5 class="card__description--head">Nexter - A Real estate business site</h5>
+                            <a href="https://nexter-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Nexter - A Real estate business site</h5></a>
                             <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
                             <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
                         </div>
@@ -84,7 +84,7 @@
                     <div class="card card-4">
                         <img src="/resources/portfolio-screenshots/randomQuote.PNG" alt="random quote generator">
                         <div class="card__description">
-                            <h5 class="card__description--head">Random Quote Generator</h5>
+                            <a href="https://codepen.io/amritpoudel11/full/wmKmOO" target="_blank"><h5 class="card__description--head">Random Quote Generator</h5></a>
                             <p class="card__description--text">for freecodecamp project</p>
                             <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
                         </div>
@@ -92,7 +92,7 @@
                     <div class="card card-5">
                         <img src="/resources/portfolio-screenshots/trillo-amrit.PNG" alt="trillo page">
                         <div class="card__description">
-                            <h5 class="card__description--head">Trillo-a hotel review page</h5>
+                            <a href="https://trillo-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Trillo-a hotel review page</h5></a>
                             <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
                             <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
                         </div>
@@ -100,7 +100,7 @@
                     <div class="card card-6">
                         <img src="/resources/portfolio-screenshots/wikiViewer.PNG" alt="wikipedia search and view app">
                         <div class="card__description">
-                            <h5 class="card__description--head">WikiViewer</h5>
+                            <a href="https://codepen.io/amritpoudel11/full/LdjJNz" target="_blank"><h5 class="card__description--head">WikiViewer</h5></a>
                             <p class="card__description--text">for FreeCodeCamp project</p>
                             <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
                         </div>
@@ -112,7 +112,7 @@
                 <h2 class="heading-2">About Me</h2>         
                 <div class="aboutMe__story">
                     <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
-                    <div>
+                    <div class=>
                         <p>
                             Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
                             I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
