give life to social icons

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <a class="btn btn-header" src="">About Me</a>          
                 </header>
                 <div class="social">
-                        <div class="social--github"><i class="fab fa-github-square"></i></div>
-                        <div class="social--linkedin"><i class="fab fa-linkedin"></i></div>
-                        <div class="social--twitter"><i class="fab fa-twitter-square"></i></div>
-                        <div class="social--facebook"><i class="fab fa-facebook-square"></i></div>
+                    <div class="social--github"><a href="https://github.com/amritpoudel11" target="_blank"><i class="fab fa-github-square"></i></a></div>
+                    <div class="social--linkedin"><a href="https://www.linkedin.com/in/amrit-poudel-29516944/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
+                    <div class="social--twitter"><a href="https://twitter.com/mounamrit" target="_blank"><i class="fab fa-twitter-square"></i></a></div>
+                    <div class="social--facebook"><a href="https://www.facebook.com/mounamrit" target="_blank"><i class="fab fa-facebook-square"></i></a></div>
                 </div>
             </section>        
             <section class="portfolio">
@@ -180,10 +180,10 @@
                 <div class="footer__connection">
                     <p>Let's Connect:</p>    
                     <div class="social">
-                        <div class="social--github"><i class="fab fa-github-square"></i></div>
-                        <div class="social--linkedin"><i class="fab fa-linkedin"></i></div>
-                        <div class="social--twitter"><i class="fab fa-twitter-square"></i></div>
-                        <div class="social--facebook"><i class="fab fa-facebook-square"></i></div>
+                        <div class="social--github"><a href="https://github.com/amritpoudel11" target="_blank"><i class="fab fa-github-square"></i></a></div>
+                        <div class="social--linkedin"><a href="https://www.linkedin.com/in/amrit-poudel-29516944/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
+                        <div class="social--twitter"><a href="https://twitter.com/mounamrit" target="_blank"><i class="fab fa-twitter-square"></i></a></div>
+                        <div class="social--facebook"><a href="https://www.facebook.com/mounamrit" target="_blank"><i class="fab fa-facebook-square"></i></a></div>
                     </div>
                 </div> 
                 <div class="footer__copy">
