add form submission action

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </section>
         </div>
         <div class="popUp">
-            <form action="get" class="popUp__form" id="contact-form">
+            <form action="https://script.google.com/macros/s/AKfycbx3DZhxfMXbyCw2J05nMiVViC4TyM-v1DwchElb/exec" method="POST" class="popUp__form gform" id="contact-form">
                 <p>
                     <label for="email">Email:</label>
                     <input type="email" name="email" placeholder="Your Email" class="form-inputs" id="email" required>
