add form submit message and handlers

--- a/index.html
+++ b/index.html
@@ -206,8 +206,20 @@
                     <button class="btn btn-message" type="submit">Send</button>
                 </p>
                 <span class="popUp__close">x</span>
+                
             </form>
-        </div>   
+            <div class="thankyou">
+                <h2>
+                    <em>Thank You!</em> Your Message is in my inbox!
+                </h2>
+                <h2>
+                    I will reply you as soon as possible. Have A good Day!
+                </h2>
+                <p class="btn btn-return">Return to Portfolio</p>
+                <span class="popUp__close">x</span>
+            </div>
+        </div>
+        <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
         <script src="portfolio.js" async defer></script>
     </body>
 </html>
