correct some errors in about me sentences

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                     <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
                     <div class=>
                         <p>
-                            Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
-                            I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
-                            I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
+                            Born in Nepal, a graduate in Environmental Science and a Resident in Portugal since 2010, 
+                            I found my interest inclined towards web app development at the end of 2017.Since then I started playing with HTML CSS and Javascript.
+                            I enjoy learning new technologies and have the aim of becoming an expert in Front-End Web Development.
                         </p>
                         <p>
                             FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
-                            At this point in time, I am looking for a company to grow with, in developing a better web world.             
+                            Currently , I am looking for a company to grow with, in developing a better web world.            
                             The tools I use in web Developement are:
                             <span>HTML5</span>,
                             <span>CSS3</span>,
