substituition with appropriate word in aboutMe section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class=>
                         <p>
                             Born in Nepal, a graduate in Environmental Science and a Resident in Portugal since 2010, 
-                            I found my interest inclined towards web app development at the end of 2017.Since then I started playing with HTML CSS and Javascript.
+                            I found my interest inclined towards web app development at the end of 2017. Since then I started playing with HTML CSS and Javascript.
                             I enjoy learning new technologies and have the aim of becoming an expert in Front-End Web Development.
                         </p>
                         <p>
@@ -132,7 +132,7 @@
                             <span>MongoDB</span>,
                             <span>Node.Js</span>,
                             <span>JQuery</span>,
-                            <span>Bootstrap</span>, and always on to learn new technologies.
+                            <span>Bootstrap</span>, and always eager to learn new technologies.
                         </p>
                     </div>
                 </div>
