change hero section to cope with animation and gradient

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
             </nav>
 
             <section class="hero">
+                <div id="particles-js"></div>
                 <header class="hero__header">
                     <div class="header__background--animation"></div>
                     <h3 class="heading-3">Hello! Nice to See You Here!</h3>
                     <h1 class="heading-1">I am Amrit Poudel</h1>
-                    <h2 class="heading-2">A Front-End Developement Enthusiast</h2>
+                    <h2 class="heading-2">A web Developement Enthusiast</h2>
                     <a class="btn btn-header" src="">About Me</a>          
                 </header>
                 <div class="social">
@@ -219,6 +220,8 @@
                 <span class="popUp__close">x</span>
             </div>
         </div>
+        <script type="text/javascript" src="particleJs/particles.js"></script>
+        <script type="text/javascript" src="particleJs/app.js"></script>
         <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
         <script src="portfolio.js" async defer></script>
     </body>
