link extention to whole description and fixed a bug

--- a/index.html
+++ b/index.html
@@ -62,49 +62,61 @@
                     <div class="card card-1">
                         <img src="/resources/portfolio-screenshots/fccLisbon.PNG" alt="fcc lisbon landing page">
                         <div class="card__description">
-                            <a href="https://www.freecodecamplisbon.org/" target="_blank"><h5 class="card__description--head">FreeCodeCamp-Lisbon Landing Page</h5></a>
-                            <p class="card__description--text">A team project in FreeCodeCamp-Lisbon</p>
-                            <p class="card__description--text">Tools: HTML, CSS, Bootstrap, Javascript, JQuery</p>
+                            <a href="https://www.freecodecamplisbon.org/" target="_blank">
+                                <h5 class="card__description--head">FreeCodeCamp-Lisbon Landing Page</h5>
+                                <p class="card__description--text">A team project in FreeCodeCamp-Lisbon</p>
+                                <p class="card__description--text">Tools: HTML, CSS, Bootstrap, Javascript, JQuery</p>
+                            </a>
                         </div>
                     </div>
                     <div class="card card-2">
                         <img src="/resources/portfolio-screenshots/natour.PNG" alt="natour tour landing page">
                         <div class="card__description">
-                            <a href="https://travelsite-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Natour - A tavel web site</h5></a>
-                            <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
-                            <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            <a href="https://travelsite-amrit.netlify.com/" target="_blank">
+                                <h5 class="card__description--head">Natour - A tavel web site</h5>
+                                <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                                <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            </a>
                         </div>
                     </div>
                     <div class="card card-3">
                         <img src="/resources/portfolio-screenshots/nexter-amrit.PNG" alt="nexter project landing page">
                         <div class="card__description">
-                            <a href="https://nexter-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Nexter - A Real estate business site</h5></a>
-                            <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
-                            <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            <a href="https://nexter-amrit.netlify.com/" target="_blank">
+                                <h5 class="card__description--head">Nexter - A Real estate business site</h5>
+                                <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                                <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            </a>
                         </div>
                     </div>
                     <div class="card card-4">
                         <img src="/resources/portfolio-screenshots/randomQuote.PNG" alt="random quote generator">
                         <div class="card__description">
-                            <a href="https://codepen.io/amritpoudel11/full/wmKmOO" target="_blank"><h5 class="card__description--head">Random Quote Generator</h5></a>
-                            <p class="card__description--text">for freecodecamp project</p>
-                            <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                            <a href="https://codepen.io/amritpoudel11/full/wmKmOO" target="_blank">
+                                <h5 class="card__description--head">Random Quote Generator</h5>
+                                <p class="card__description--text">for freecodecamp project</p>
+                                <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                            </a>
                         </div>
                     </div>
                     <div class="card card-5">
                         <img src="/resources/portfolio-screenshots/trillo-amrit.PNG" alt="trillo page">
                         <div class="card__description">
-                            <a href="https://trillo-amrit.netlify.com/" target="_blank"><h5 class="card__description--head">Trillo-a hotel review page</h5></a>
-                            <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
-                            <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            <a href="https://trillo-amrit.netlify.com/" target="_blank">
+                                <h5 class="card__description--head">Trillo-a hotel review page</h5>
+                                <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                                <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                            </a>
                         </div>
                     </div>
                     <div class="card card-6">
                         <img src="/resources/portfolio-screenshots/wikiViewer.PNG" alt="wikipedia search and view app">
                         <div class="card__description">
-                            <a href="https://codepen.io/amritpoudel11/full/LdjJNz" target="_blank"><h5 class="card__description--head">WikiViewer</h5></a>
-                            <p class="card__description--text">for FreeCodeCamp project</p>
-                            <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                            <a href="https://codepen.io/amritpoudel11/full/LdjJNz" target="_blank">
+                                <h5 class="card__description--head">WikiViewer</h5>
+                                <p class="card__description--text">for FreeCodeCamp project</p>
+                                <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                            </a>
                         </div>
                     </div>
                     
