changed background image

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
                 </div> 
                 <div class="footer__copy">
-                    <p>background image by Goran Ivos on Unsplash</p>
+                    <p>Background Image by Sam Erwin on Unsplash</p>
                     <p>&copy; Amrit Poudel,  Lisbon, Portugal, 2019.</p>
                 </div>
             </section>
