fix bugs/few browser-compatibility issues/ few accesebility issues

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="particles-js"></div>
                 <header class="hero__header">
                     <div class="header__background--animation"></div>
-                    <h3 class="heading-3">Hello! Nice to See You Here!</h3>
+                    <p class="heading-3">Hello! Nice to See You Here!</p>
                     <h1 class="heading-1">I am Amrit Poudel</h1>
                     <h2 class="heading-2">A web Developement Enthusiast</h2>
                     <a class="btn btn-header" src="">About Me</a>          
