--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li class="nav__list--home">Home</li>
                         <li class="nav__list--portfolio">Portfolio</li>
                         <li class="nav__list--about">About Me</li>                        
-                        <li class="nav__list--certificate">Cerificates</li>
+                        <li class="nav__list--certificate">Certificates</li>
                         <li class="nav__list--contact">Contact</li>
                     </ul>
                 </div>
@@ -213,7 +213,7 @@
                 </p>
                 <p>
                     <label for="message">Message:</label>
-                    <textarea name="message" rows="10" class="form-inputs" id="message" required></textarea>
+                    <textarea name="message" rows="10" class="form-inputs" id="message" placeholder="your message ..." required></textarea>
                 </p>
                 <p>
                     <button class="btn btn-message" type="submit">Send</button>
