add meta description

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="shortcut icon" type="image/png" href="resources/amrit-favicon.png">
-        <title>Amrit Poudel-Front End developer</title>
-        <meta name="description" content="">
+        <title>Amrit Poudel| Front End developer</title>
+        <meta name="description" content="A juinor Front-End Developer based in Lisbon, Portugal. He developes responsive, cross-browser supporting UI and UX of web applications">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
