--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <div id="particles-js"></div>
                 <header class="hero__header">
                     <div class="header__background--animation"></div>
-                    <p class="heading-3">Hello! Nice to See You Here!</p>
+                    <p class="heading-3">
+                        <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span><span>!</span><span>&nbsp;</span><span>N</span><span>I</span><span>C</span><span>E</span><span>&nbsp;</span><span>T</span><span>O</span><span>&nbsp;</span><span>S</span><span>E</span><span>E</span><span>&nbsp;</span><span>Y</span><span>O</span><span>U</span><span>&nbsp;</span><span>H</span><span>E</span><span>R</span><span>E</span><span>!</span>
+                    </p>
                     <h1 class="heading-1">I am Amrit Poudel</h1>
                     <h2 class="heading-2">A web Developement Enthusiast</h2>
                     <a class="btn btn-header" src="">About Me</a>          
