fixed toggle bug

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="nav-right">
-                    <ul class="nav__list toggle">
+                    <ul class="nav__list toggle-menu">
                         <li class="nav__list--home">Home</li>
                         <li class="nav__list--portfolio">Portfolio</li>
                         <li class="nav__list--about">About Me</li>                        
