fixed an issue of navbar menu toggle

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="nav-right">
-                    <ul class="nav__list toggle-menu">
+                    <ul class="nav__list toggle-menu toggle">
                         <li class="nav__list--home">Home</li>
                         <li class="nav__list--portfolio">Portfolio</li>
                         <li class="nav__list--about">About Me</li>                        
