--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       type="image/png"
       href="resources/amrit-favicon.png"
     />
-    <title>Amrit Poudel | Front End developer</title>
+    <title>Amrit Poudel | Full-stack Developer</title>
     <meta
       name="description"
-      content="A junior Front-End Developer based in Lisbon, Portugal. He developes responsive, cross-browser supporting UI and UX of web applications"
+      content="A junior Full-stack Developer based in Utrecht, Netherlands. He loves to develop softwares and web applications for the benefit of human society"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -59,7 +59,7 @@
             />
             <div class="nav__header">
               <h3>Amrit Poudel</h3>
-              <h6>Front-End Developer</h6>
+              <h6>Full-Stack Developer</h6>
             </div>
           </a>
           <div class="nav__icon">
@@ -70,7 +70,7 @@
           <ul class="nav__list toggle-menu toggle">
             <li class="nav__list--home">Home</li>
             <li class="nav__list--portfolio">Portfolio</li>
-            <li class="nav__list--about">About Me</li>
+            <li class="nav__list--about">About</li>
             <li class="nav__list--certificate">Certificates</li>
             <li class="nav__list--contact">Contact</li>
           </ul>
@@ -90,9 +90,9 @@
             ><span>O</span><span>U</span><span>&nbsp;</span><span>H</span
             ><span>E</span><span>R</span><span>E</span><span>!</span>
           </p>
-          <h1 class="heading-1">I am Amrit Poudel</h1>
-          <h2 class="heading-2">A web Developement Enthusiast</h2>
-          <a class="btn btn-header" src="">About Me</a>
+          <h1 class="heading-1">You are about To Know Amrit Poudel</h1>
+          <h2 class="heading-2">A Programmer for Society</h2>
+          <a class="btn btn-header" src="">About Amrit</a>
         </header>
         <div class="social">
           <div class="social--github">
@@ -120,7 +120,7 @@
         </div>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio__heading">My Portfolio</h2>
+        <h2 class="portfolio__heading">Portfolio</h2>
         <div class="portfolio__grid">
           <div class="card card-1">
             <img
@@ -237,7 +237,7 @@
         </div>
       </section>
       <section class="aboutMe">
-        <h2 class="heading-2">About Me</h2>
+        <h2 class="heading-2">Amrit's Story</h2>
         <div class="aboutMe__story">
           <img
             src="resources/profilePic2.jpg"
@@ -246,7 +246,7 @@
           />
           <div class="abouMe__story--text">
             <p>
-              Born in Nepal, a graduate in Environmental Science and now a
+              Born in Nepal, a graduate in Environmental Sciences and now a
               portuguese citizen,Amrit is building his own silk road to
               self-development to develop himself to an asset to human society.
               His Intrest in programming starts from the end of 2017, where he
@@ -288,10 +288,10 @@
             </p>
           </div>
         </div>
-        <button class="btn btn__contactMe click-contact">Contact Me</button>
+        <button class="btn btn__contactMe click-contact">Contact</button>
       </section>
       <section class="certificate-box">
-        <h2 class="certificate-box__heading">Some of my Certificates</h2>
+        <h2 class="certificate-box__heading">Certificate Album</h2>
         <div class="certificates-list">
           <div class="certificate certificate-1 fade">
             <img src="/resources/certificates/fcc-responsive.PNG" alt="" />
