small text edits

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             ><span>E</span><span>R</span><span>E</span><span>!</span>
           </p>
           <h1 class="heading-1">You are about To Know Amrit Poudel</h1>
-          <h2 class="heading-2">A Programmer for Society</h2>
+          <h2 class="heading-2">A Programming Enthusiast</h2>
           <a class="btn btn-header" src="">About Amrit</a>
         </header>
         <div class="social">
@@ -246,8 +246,8 @@
           />
           <div class="abouMe__story--text">
             <p>
-              Born in Nepal, a graduate in Environmental Sciences and now a
-              portuguese citizen,Amrit is building his own silk road to
+              Born in Nepal, a portuguese citizen and a graduate in
+              Environmental Sciences, Amrit is building his own silk road to
               self-development to develop himself to an asset to human society.
               His Intrest in programming starts from the end of 2017, where he
               started his journey by learning HTML, css and javascript through a
